--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="awwwdde portfolio website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AWWWDDE INC.</title>
+    <title>AWWWDDE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
