--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+                                   _     _      
+  __ _ __ __ ____ __ ____ __ __ __| | __| | ___ 
+ / _` |\ V  V /\ V  V /\ V  V // _` |/ _` |/ -_)
+ \__,_| \_/\_/  \_/\_/  \_/\_/ \__,_|\__,_|\___|
+This code is copyrighted by awwwdde
+COPYING AND USE OF THIS CODE OR PARTS OF IT IS NOT PERMITTED WITHOUT PRIOR CONSENT.
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
